--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js",
-    "build": "node app.js"
+    "start": "node app.js"
+   
+
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -24,8 +25,4 @@
     "nodemon": "^3.0.3",
     "validate": "^5.2.0",
     "validator": "^13.11.0"
-  },
-  "engines": {
-    "node": "14.x"
-  }
-}
+  }}
