--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
-   "version": 2,
-   "builds": [
-     { "src": "path/to/source", "use": "@vercel/static-build" }
-   ],
-   "env": {
-     "YOUR_ENV_VARIABLE": "value"
-   }
- }
- 
+  "version": 2,
+  "name": "pinterst",
+  "builds": [
+     { "src": "app.js", "use": "@vercel/node" }
+  ],
+  "routes": [
+     { "src": "/(.*)", "dest": "/app.js" }
+  ]
+}
